fix: mobile logo stretch

--- a/src/App.css
+++ b/src/App.css
@@ -504,8 +504,10 @@ table th {
 }
 
 .logo {
-  height: 90px;
-  margin-top: -10px;
+  /* height: 90px;
+  margin-top: -10px; */
+  margin-top: -0.5rem;
+  margin-bottom: 1rem;
 }
 
 .menuIcon {
